go_parser/generated/Go2LLVMParser.cpp

// Generated from /home/gros/studia/eaiib_3b/kompilatory/go_parser/Go2LLVM.g4 by ANTLR 4.7.1


#include "Go2LLVMListener.h"
#include "Go2LLVMVisitor.h"

#include "Go2LLVMParser.h"


using namespace antlrcpp;
using namespace go_parser;
using namespace antlr4;

Go2LLVMParser::Go2LLVMParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

Go2LLVMParser::~Go2LLVMParser() {
  delete _interpreter;
}

std::string Go2LLVMParser::getGrammarFileName() const {
  return "Go2LLVM.g4";
}

const std::vector<std::string>& Go2LLVMParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& Go2LLVMParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- SourceFileContext ------------------------------------------------------------------

Go2LLVMParser::SourceFileContext::SourceFileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Go2LLVMParser::PackageClauseContext* Go2LLVMParser::SourceFileContext::packageClause() {
  return getRuleContext<Go2LLVMParser::PackageClauseContext>(0);
}

std::vector<Go2LLVMParser::EosContext *> Go2LLVMParser::SourceFileContext::eos() {
  return getRuleContexts<Go2LLVMParser::EosContext>();
}

Go2LLVMParser::EosContext* Go2LLVMParser::SourceFileContext::eos(size_t i) {
  return getRuleContext<Go2LLVMParser::EosContext>(i);
}

std::vector<Go2LLVMParser::TopLevelDeclContext *> Go2LLVMParser::SourceFileContext::topLevelDecl() {
  return getRuleContexts<Go2LLVMParser::TopLevelDeclContext>();
}

Go2LLVMParser::TopLevelDeclContext* Go2LLVMParser::SourceFileContext::topLevelDecl(size_t i) {
  return getRuleContext<Go2LLVMParser::TopLevelDeclContext>(i);
}


size_t Go2LLVMParser::SourceFileContext::getRuleIndex() const {
  return Go2LLVMParser::RuleSourceFile;
}

void Go2LLVMParser::SourceFileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Go2LLVMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSourceFile(this);
}

void Go2LLVMParser::SourceFileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Go2LLVMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSourceFile(this);
}


antlrcpp::Any Go2LLVMParser::SourceFileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Go2LLVMVisitor*>(visitor))
    return parserVisitor->visitSourceFile(this);
  else
    return visitor->visitChildren(this);
}

Go2LLVMParser::SourceFileContext* Go2LLVMParser::sourceFile() {
  SourceFileContext *_localctx = _tracker.createInstance<SourceFileContext>(_ctx, getState());
  enterRule(_localctx, 0, Go2LLVMParser::RuleSourceFile);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(54);
    packageClause();
    setState(55);
    eos();
    setState(61);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == Go2LLVMParser::VAR_TOK

    || _la == Go2LLVMParser::FUNC_TOK) {
      setState(56);
      topLevelDecl();
      setState(57);
      eos();
      setState(63);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PackageClauseContext ------------------------------------------------------------------

Go2LLVMParser::PackageClauseContext::PackageClauseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Go2LLVMParser::PackageClauseContext::PACKAGE_TOK() {
  return getToken(Go2LLVMParser::PACKAGE_TOK, 0);
}

tree::TerminalNode* Go2LLVMParser::PackageClauseContext::IDENT_TOK() {
  return getToken(Go2LLVMParser::IDENT_TOK, 0);
}


size_t Go2LLVMParser::PackageClauseContext::getRuleIndex() const {
  return Go2LLVMParser::RulePackageClause;
}

void Go2LLVMParser::PackageClauseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Go2LLVMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPackageClause(this);
}

void Go2LLVMParser::PackageClauseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Go2LLVMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPackageClause(this);
}


antlrcpp::Any Go2LLVMParser::PackageClauseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Go2LLVMVisitor*>(visitor))
    return parserVisitor->visitPackageClause(this);
  else
    return visitor->visitChildren(this);
}

Go2LLVMParser::PackageClauseContext* Go2LLVMParser::packageClause() {
  PackageClauseContext *_localctx = _tracker.createInstance<PackageClauseContext>(_ctx, getState());
  enterRule(_localctx, 2, Go2LLVMParser::RulePackageClause);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(64);
    match(Go2LLVMParser::PACKAGE_TOK);
    setState(65);
    match(Go2LLVMParser::IDENT_TOK);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TopLevelDeclContext ------------------------------------------------------------------

Go2LLVMParser::TopLevelDeclContext::TopLevelDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Go2LLVMParser::DeclarationContext* Go2LLVMParser::TopLevelDeclContext::declaration() {
  return getRuleContext<Go2LLVMParser::DeclarationContext>(0);
}

Go2LLVMParser::FunctionDeclContext* Go2LLVMParser::TopLevelDeclContext::functionDecl() {
  return getRuleContext<Go2LLVMParser::FunctionDeclContext>(0);
}


size_t Go2LLVMParser::TopLevelDeclContext::getRuleIndex() const {
  return Go2LLVMParser::RuleTopLevelDecl;
}

void Go2LLVMParser::TopLevelDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Go2LLVMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTopLevelDecl(this);
}

void Go2LLVMParser::TopLevelDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Go2LLVMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTopLevelDecl(this);
}


antlrcpp::Any Go2LLVMParser::TopLevelDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Go2LLVMVisitor*>(visitor))
    return parserVisitor->visitTopLevelDecl(this);
  else
    return visitor->visitChildren(this);
}

Go2LLVMParser::TopLevelDeclContext* Go2LLVMParser::topLevelDecl() {
  TopLevelDeclContext *_localctx = _tracker.createInstance<TopLevelDeclContext>(_ctx, getState());
  enterRule(_localctx, 4, Go2LLVMParser::RuleTopLevelDecl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(69);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case Go2LLVMParser::VAR_TOK: {
        enterOuterAlt(_localctx, 1);
        setState(67);
        declaration();
        break;
      }

      case Go2LLVMParser::FUNC_TOK: {
        enterOuterAlt(_localctx, 2);
        setState(68);
        functionDecl();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

Go2LLVMParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Go2LLVMParser::BlockContext::BO() {
  return getToken(Go2LLVMParser::BO, 0);
}

Go2LLVMParser::StatementListContext* Go2LLVMParser::BlockContext::statementList() {
  return getRuleContext<Go2LLVMParser::StatementListContext>(0);
}

tree::TerminalNode* Go2LLVMParser::BlockContext::BC() {
  return getToken(Go2LLVMParser::BC, 0);
}


size_t Go2LLVMParser::BlockContext::getRuleIndex() const {
  return Go2LLVMParser::RuleBlock;
}

void Go2LLVMParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Go2LLVMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void Go2LLVMParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Go2LLVMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}


antlrcpp::Any Go2LLVMParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Go2LLVMVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

Go2LLVMParser::BlockContext* Go2LLVMParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 6, Go2LLVMParser::RuleBlock);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71);
    match(Go2LLVMParser::BO);
    setState(72);
    statementList();
    setState(73);
    match(Go2LLVMParser::BC);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

Go2LLVMParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Go2LLVMParser::TypeContext::IDENT_TOK() {
  return getToken(Go2LLVMParser::IDENT_TOK, 0);
}


size_t Go2LLVMParser::TypeContext::getRuleIndex() const {
  return Go2LLVMParser::RuleType;
}

void Go2LLVMParser::TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Go2LLVMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType(this);
}

void Go2LLVMParser::TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Go2LLVMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType(this);
}


antlrcpp::Any Go2LLVMParser::TypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Go2LLVMVisitor*>(visitor))
    return parserVisitor->visitType(this);
  else
    return visitor->visitChildren(this);
}

Go2LLVMParser::TypeContext* Go2LLVMParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 8, Go2LLVMParser::RuleType);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(75);
    match(Go2LLVMParser::IDENT_TOK);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EosContext ------------------------------------------------------------------

Go2LLVMParser::EosContext::EosContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Go2LLVMParser::EosContext::SEMICOLON() {
  return getToken(Go2LLVMParser::SEMICOLON, 0);
}

tree::TerminalNode* Go2LLVMParser::EosContext::EOF() {
  return getToken(Go2LLVMParser::EOF, 0);
}


size_t Go2LLVMParser::EosContext::getRuleIndex() const {
  return Go2LLVMParser::RuleEos;
}

void Go2LLVMParser::EosContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Go2LLVMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEos(this);
}

void Go2LLVMParser::EosContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Go2LLVMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEos(this);
}


antlrcpp::Any Go2LLVMParser::EosContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Go2LLVMVisitor*>(visitor))
    return parserVisitor->visitEos(this);
  else
    return visitor->visitChildren(this);
}

Go2LLVMParser::EosContext* Go2LLVMParser::eos() {
  EosContext *_localctx = _tracker.createInstance<EosContext>(_ctx, getState());
  enterRule(_localctx, 10, Go2LLVMParser::RuleEos);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(80);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(77);
      match(Go2LLVMParser::SEMICOLON);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(78);
      match(Go2LLVMParser::EOF);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(79);

      if (!(lineTerminatorAhead())) throw FailedPredicateException(this, "lineTerminatorAhead()");
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementListContext ------------------------------------------------------------------

Go2LLVMParser::StatementListContext::StatementListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<Go2LLVMParser::StatementContext *> Go2LLVMParser::StatementListContext::statement() {
  return getRuleContexts<Go2LLVMParser::StatementContext>();
}

Go2LLVMParser::StatementContext* Go2LLVMParser::StatementListContext::statement(size_t i) {
  return getRuleContext<Go2LLVMParser::StatementContext>(i);
}

std::vector<Go2LLVMParser::EosContext *> Go2LLVMParser::StatementListContext::eos() {
  return getRuleContexts<Go2LLVMParser::EosContext>();
}

Go2LLVMParser::EosContext* Go2LLVMParser::StatementListContext::eos(size_t i) {
  return getRuleContext<Go2LLVMParser::EosContext>(i);
}


size_t Go2LLVMParser::StatementListContext::getRuleIndex() const {
  return Go2LLVMParser::RuleStatementList;
}

void Go2LLVMParser::StatementListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Go2LLVMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatementList(this);
}

void Go2LLVMParser::StatementListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Go2LLVMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatementList(this);
}


antlrcpp::Any Go2LLVMParser::StatementListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Go2LLVMVisitor*>(visitor))
    return parserVisitor->visitStatementList(this);
  else
    return visitor->visitChildren(this);
}

Go2LLVMParser::StatementListContext* Go2LLVMParser::statementList() {
  StatementListContext *_localctx = _tracker.createInstance<StatementListContext>(_ctx, getState());
  enterRule(_localctx, 12, Go2LLVMParser::RuleStatementList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << Go2LLVMParser::T__0)
      | (1ULL << Go2LLVMParser::T__1)
      | (1ULL << Go2LLVMParser::T__11)
      | (1ULL << Go2LLVMParser::T__12)
      | (1ULL << Go2LLVMParser::T__17)
      | (1ULL << Go2LLVMParser::T__19)
      | (1ULL << Go2LLVMParser::STRING_TOK)
      | (1ULL << Go2LLVMParser::INT_TOK)
      | (1ULL << Go2LLVMParser::FLOAT_TOK)
      | (1ULL << Go2LLVMParser::IMAG_TOK)
      | (1ULL << Go2LLVMParser::VAR_TOK)
      | (1ULL << Go2LLVMParser::RETURN_TOK)
      | (1ULL << Go2LLVMParser::IF_TOK)
      | (1ULL << Go2LLVMParser::IDENT_TOK)
      | (1ULL << Go2LLVMParser::BO)
      | (1ULL << Go2LLVMParser::PO)
      | (1ULL << Go2LLVMParser::SEMICOLON))) != 0)) {
      setState(82);
      statement();
      setState(83);
      eos();
      setState(89);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

Go2LLVMParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Go2LLVMParser::DeclarationContext* Go2LLVMParser::StatementContext::declaration() {
  return getRuleContext<Go2LLVMParser::DeclarationContext>(0);
}

Go2LLVMParser::SimpleStmtContext* Go2LLVMParser::StatementContext::simpleStmt() {
  return getRuleContext<Go2LLVMParser::SimpleStmtContext>(0);
}

Go2LLVMParser::BlockContext* Go2LLVMParser::StatementContext::block() {
  return getRuleContext<Go2LLVMParser::BlockContext>(0);
}

Go2LLVMParser::ReturnStmtContext* Go2LLVMParser::StatementContext::returnStmt() {
  return getRuleContext<Go2LLVMParser::ReturnStmtContext>(0);
}

Go2LLVMParser::IfStmtContext* Go2LLVMParser::StatementContext::ifStmt() {
  return getRuleContext<Go2LLVMParser::IfStmtContext>(0);
}


size_t Go2LLVMParser::StatementContext::getRuleIndex() const {
  return Go2LLVMParser::RuleStatement;
}

void Go2LLVMParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Go2LLVMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void Go2LLVMParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Go2LLVMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


antlrcpp::Any Go2LLVMParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Go2LLVMVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

Go2LLVMParser::StatementContext* Go2LLVMParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 14, Go2LLVMParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(95);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case Go2LLVMParser::VAR_TOK: {
        enterOuterAlt(_localctx, 1);
        setState(90);
        declaration();
        break;
      }

      case Go2LLVMParser::T__0:
      case Go2LLVMParser::T__1:
      case Go2LLVMParser::T__11:
      case Go2LLVMParser::T__12:
      case Go2LLVMParser::T__17:
      case Go2LLVMParser::T__19:
      case Go2LLVMParser::STRING_TOK:
      case Go2LLVMParser::INT_TOK:
      case Go2LLVMParser::FLOAT_TOK:
      case Go2LLVMParser::IMAG_TOK:
      case Go2LLVMParser::IDENT_TOK:
      case Go2LLVMParser::PO:
      case Go2LLVMParser::SEMICOLON: {
        enterOuterAlt(_localctx, 2);
        setState(91);
        simpleStmt();
        break;
      }

      case Go2LLVMParser::BO: {
        enterOuterAlt(_localctx, 3);
        setState(92);
        block();
        break;
      }

      case Go2LLVMParser::RETURN_TOK: {
        enterOuterAlt(_localctx, 4);
        setState(93);
        returnStmt();
        break;
      }

      case Go2LLVMParser::IF_TOK: {
        enterOuterAlt(_localctx, 5);
        setState(94);
        ifStmt();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfStmtContext ------------------------------------------------------------------

Go2LLVMParser::IfStmtContext::IfStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Go2LLVMParser::IfStmtContext::IF_TOK() {
  return getToken(Go2LLVMParser::IF_TOK, 0);
}

Go2LLVMParser::ExpressionContext* Go2LLVMParser::IfStmtContext::expression() {
  return getRuleContext<Go2LLVMParser::ExpressionContext>(0);
}

std::vector<Go2LLVMParser::BlockContext *> Go2LLVMParser::IfStmtContext::block() {
  return getRuleContexts<Go2LLVMParser::BlockContext>();
}

Go2LLVMParser::BlockContext* Go2LLVMParser::IfStmtContext::block(size_t i) {
  return getRuleContext<Go2LLVMParser::BlockContext>(i);
}

Go2LLVMParser::SimpleStmtContext* Go2LLVMParser::IfStmtContext::simpleStmt() {
  return getRuleContext<Go2LLVMParser::SimpleStmtContext>(0);
}

tree::TerminalNode* Go2LLVMParser::IfStmtContext::SEMICOLON() {
  return getToken(Go2LLVMParser::SEMICOLON, 0);
}

tree::TerminalNode* Go2LLVMParser::IfStmtContext::ELSE_TOK() {
  return getToken(Go2LLVMParser::ELSE_TOK, 0);
}

Go2LLVMParser::IfStmtContext* Go2LLVMParser::IfStmtContext::ifStmt() {
  return getRuleContext<Go2LLVMParser::IfStmtContext>(0);
}


size_t Go2LLVMParser::IfStmtContext::getRuleIndex() const {
  return Go2LLVMParser::RuleIfStmt;
}

void Go2LLVMParser::IfStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Go2LLVMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIfStmt(this);
}

void Go2LLVMParser::IfStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Go2LLVMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIfStmt(this);
}


antlrcpp::Any Go2LLVMParser::IfStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Go2LLVMVisitor*>(visitor))
    return parserVisitor->visitIfStmt(this);
  else
    return visitor->visitChildren(this);
}

Go2LLVMParser::IfStmtContext* Go2LLVMParser::ifStmt() {
  IfStmtContext *_localctx = _tracker.createInstance<IfStmtContext>(_ctx, getState());
  enterRule(_localctx, 16, Go2LLVMParser::RuleIfStmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(97);
    match(Go2LLVMParser::IF_TOK);
    setState(101);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      setState(98);
      simpleStmt();
      setState(99);
      match(Go2LLVMParser::SEMICOLON);
      break;
    }

    }
    setState(103);
    expression(0);
    setState(104);
    block();
    setState(110);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      setState(105);
      match(Go2LLVMParser::ELSE_TOK);
      setState(108);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case Go2LLVMParser::IF_TOK: {
          setState(106);
          ifStmt();
          break;
        }

        case Go2LLVMParser::BO: {
          setState(107);
          block();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReturnStmtContext ------------------------------------------------------------------

Go2LLVMParser::ReturnStmtContext::ReturnStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Go2LLVMParser::ReturnStmtContext::RETURN_TOK() {
  return getToken(Go2LLVMParser::RETURN_TOK, 0);
}

Go2LLVMParser::ExpressionListContext* Go2LLVMParser::ReturnStmtContext::expressionList() {
  return getRuleContext<Go2LLVMParser::ExpressionListContext>(0);
}


size_t Go2LLVMParser::ReturnStmtContext::getRuleIndex() const {
  return Go2LLVMParser::RuleReturnStmt;
}

void Go2LLVMParser::ReturnStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Go2LLVMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterReturnStmt(this);
}

void Go2LLVMParser::ReturnStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Go2LLVMListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitReturnStmt(this);
}


antlrcpp::Any Go2LLVMParser::ReturnStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Go2LLVMVisitor*>(visitor))
    return parserVisitor->visitReturnStmt(this);
  else
    return visitor->visitChildren(this);
}

Go2LLVMParser::ReturnStmtContext* Go2LLVMParser::returnStmt() {
  ReturnStmtContext *_localctx = _tracker.createInstance<ReturnStmtContext>(_ctx, getState());
  enterRule(_localctx, 18, Go2LLVMParser::RuleReturnStmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(112);
    match(Go2LLVMParser::RETURN_TOK);
    setState(114);
    _errHandler->sync(this);
